--- a/skyblock/plugins/IridiumSkyblock/config.json
+++ b/skyblock/plugins/IridiumSkyblock/config.json
@@ -57,7 +57,7 @@
       "interact": true,
       "kickMembers": true,
       "inviteMembers": true,
-      "regen": true,
+      "regen": false,
       "islandprivate": true,
       "promote": true,
       "demote": true,
@@ -93,7 +93,7 @@
       "interact": true,
       "kickMembers": true,
       "inviteMembers": true,
-      "regen": true,
+      "regen": false,
       "islandprivate": true,
       "promote": true,
       "demote": true,
@@ -129,7 +129,7 @@
       "interact": true,
       "kickMembers": true,
       "inviteMembers": true,
-      "regen": true,
+      "regen": false,
       "islandprivate": true,
       "promote": true,
       "demote": true,
